deploy/k8s-base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clan-communication
  labels:
    app.kubernetes.io/managed-by: kubectl
